perf: re-arrange the register convention